# miseqinteropreader

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: publish.sh
src/interop_reader/: __init__.py  error_metrics_parser.py  interop_reader.py  models.py  quality_metrics_parser.py  read_records.py  tile_metrics_parser.py
src/miseqinteropreader/: __main__.py  cli.py  error_metrics_parser.py  interop_reader.py  models.py  read_records.py
src/miseqinteropreader/commands/: extract.py  info.py  list_runs.py  summary.py  validate.py
src/miseqinteropreader/interoptestgenerator/: __init__.py  gen_data.py
tests/: cli_test.py  conftest.py  error_metrics_parser_test.py  extract_command_test.py  formatters_test.py  integration_test.py  interop_reader_test.py  models_test.py  read_records_test.py  summary_command_test.py
tests/interoptestgenerator/: gen_data.py
