[tool.poetry]
name = "miseqinteropreader"
version = "0.1.0"
description = ""
authors = ["drickett <drickett@bccfe.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
mypy = "^1.10.1"
mypy-extensions = "^1.0.0"
ruff = "^0.5.1"
pandas-stubs = "^2.2.2.240603"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.isort]
# profile = "black"

# [tool.black]
# target-version = ['py310']
# line-length = 120

[tool.pytest.ini_options]
pythonpath = ['src']
minversion = "6.0"
render_collapsed = "true"
addopts = "-p no:cacheproviders -vra --strict-markers --cov=src/interop_reader --cov-report xml:coverage.xml --cov-report term --no-cov-on-fail"
filterwarnings = []

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]
fixable = ["ALL"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
